clusters/takeout/apps/qdirstat/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: qdirstat
  labels:
    app: qdirstat
spec:
  serviceName: qdirstat
  selector:
    matchLabels:
      app: qdirstat
  replicas: 0 # active nfs-client
  template:
    metadata:
      labels:
        app: qdirstat
    spec:
      containers:
        - name: qdirstat
          image: jlesage/qdirstat:latest
          imagePullPolicy: Always
          # command: ["sh","-c","tail -f /dev/null"]
          volumeMounts:
            - name: qdirstat-config
              mountPath: /config
            - name: warehouse
              mountPath: /mount/warehouse
            - name: downloads
              mountPath: /mount/downloads
            - name: amazon-kubernetes-storage
              mountPath: /mount/amazon-kubernetes-storage
          resources:
            requests: 
              cpu: 500m
            limits:
              memory: 512Mi
      volumes:
        - name: warehouse
          persistentVolumeClaim:
            claimName: warehouse-media
        - name: downloads
          persistentVolumeClaim:
            claimName: qbittorrent-downloads
        - name: amazon-kubernetes-storage
          persistentVolumeClaim:
            claimName: amazon-kubernetes-storage
      imagePullSecrets:
        - name: docker-hub
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: qdirstat-config
      spec:
        accessModes: 
          - ReadWriteMany
        volumeMode: Filesystem
        storageClassName: nfs-client
        resources:
          requests:
            storage: 1Gi
